--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 org.gradle.jvmargs = -Xms4G -Xmx4G
 org.gradle.parallel = true
-org.gradle.configuration-cache = true
+# :(
+org.gradle.configuration-cache = false
