--- a/src/main/templates/META-INF/mods.toml
+++ b/src/main/templates/META-INF/mods.toml
@@ -11,7 +11,7 @@ license = "${mod_license}"
     authors = "${mod_author}"
 
 [[dependencies.${mod_id}]]
-    modId = "neoforge"
+    modId = "forge"
     mandatory = true
     ordering = "NONE"
     side = "BOTH"
