--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,3 @@
 org.gradle.jvmargs = -Xms4G -Xmx4G
 org.gradle.parallel = true
-# :(
-org.gradle.configuration-cache = false
+org.gradle.configuration-cache = true
