--- a/src/main/java/build.properties
+++ b/src/main/java/build.properties
@@ -1,6 +1,7 @@
 #Configured by Manifold Gradle.
 #
 #
-#Sun Jun 22 12:10:10 JST 2025
+#Mon Jun 23 18:30:08 JST 2025
 MC=21.1
-fabric=
+forgelike=
+neoforge=
