--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
 org.gradle.jvmargs = -Xms4G -Xmx4G
 org.gradle.parallel = true
 org.gradle.configuration-cache = true
+
+manifold_version = 2025.1.24
